samples/_failures_safe/1761442516_1f5a52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6722b26e.c: In function ‘main’:
./samples/SAFE/__tmp_6722b26e.c:170:20: error: expected ‘;’ at end of input
  170 |         free_matrix
      |                    ^
      |                    ;
./samples/SAFE/__tmp_6722b26e.c:170:9: error: expected declaration or statement at end of input
  170 |         free_matrix
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_6722b26e.c:170:9: error: expected declaration or statement at end of input
